package JuegoVampiro2.core;

public class Mordida extends Ataque {

    public Mordida(int daño, int probabilidadExito) {
        super(daño, probabilidadExito);
    }
} 
